--- a/part 3/phonebook_server/package.json
+++ b/part 3/phonebook_server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon --watch index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "Marco Stöcker",
   "license": "ISC",
@@ -18,6 +19,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "nodemon": "^2.0.6"
   }
 }
